Fixes banner covering content in poster room (#1491)

--- a/src/scss/constants.scss
+++ b/src/scss/constants.scss
@@ -59,6 +59,7 @@ $chat-sidebar-width: 360px;
 $navbar-height: 66px;
 $footer-height: 30px;
 $chat-input-height: 114px;
+$announcement-banner-height: 50px;
 
 $avatarSize: max(4vh, 3vw);
 $avatarSizeMin: 25px;
